Update Hugging Face Space name in deploy.yml

--- a/deploy.yml
+++ b/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }} # Uses the secret you just created
           HF_USERNAME: vedanthibhargavi # <<-- REPLACE THIS
-          SPACE_NAME: predict_heart          # <<-- REPLACE THIS
+          SPACE_NAME: heart_app          # <<-- REPLACE THIS
         run: |
           echo "Starting sync to Hugging Face Space: ${{ env.SPACE_NAME }}"
           
